Update: Fix subscribe middleware and handler

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN = 8301282743:AAEK65nq3upE7VjOsbhCUOjlXswC9mZbshU
-TELEGRAM_BOT_USERNAME = yangihayotkonkursbot
+TELEGRAM_BOT_TOKEN = 7335676960:AAEgqpygqN2HfTzPe3tnbD1YfXlid7Dc7GU
+TELEGRAM_BOT_USERNAME = DownloaderFastRobot
