--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BOT_TOKEN = 7548987414:AAFLgdxKWns3HLXFqQ_ZWgaA7qIjQT70oLw
+TELEGRAM_BOT_TOKEN = 8301282743:AAEK65nq3upE7VjOsbhCUOjlXswC9mZbshU
+TELEGRAM_BOT_USERNAME = yangihayotkonkursbot
