--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - db
     
   db:
-    image: postgres:15
+    image: postgres:14.0-alpine
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -28,7 +28,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "5432:5432"
     
   celery:
     build: .
@@ -45,3 +45,7 @@ services:
       - .:/app
     depends_on:
       - redis
+
+
+volumes:
+  postgres_data:
